添加 JFXChipView