@@ -15,6 +15,7 @@ application {
             '--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
             '--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
             '--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED',
             '--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
             '--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED'
     ]
